@@ -27,6 +27,7 @@ class CK2Barony
 		double			getManpowerProxy()	const { return manpowerProxy; };
 		double			getTechBonus()			const { return techBonus; };
 		double			getPSE()					const { return PSE; };
+		int				getShips()				const { return ships; };
 	private:
 		void	determineBaseTaxProxy();
 		void	determinePopProxy();
@@ -45,6 +46,7 @@ class CK2Barony
 		double							techBonus;
 
 		double	PSE;
+		int		ships;
 };
 
 
